--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all directories
+!*/
+
+# Unignore Dockerfile
+!Dockerfile
+
+### Above combination will ignore all files without extension ###
+
+# vs code related files
+tasks.json
+
+# OS generated files #
+######################
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
-*.exe~
 *.dll
 *.so
 *.dylib
@@ -10,3 +30,12 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
+
+# IntelliJ Goland directory and files
+.idea/
+
+# Docker env files
+*.env
